tests/trybuild-failures/not_binary_expression.stderr
error: proc-macro derive panicked
 --> $DIR/not_binary_expression.rs:4:5
  |
4 |     assertify!("foo");
  |     ^^^^^^^^^^^^^^^^^^
  |
  = help: message: not a binary expression, e.g. 1 == 1
  = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
