tests/trybuild-failures/not_binary_expression.rs
#![allow(deprecated)]

use assertify::assertify;

fn main() {
    assertify!("foo");
    unreachable!();
}
